Final batch of link updates in articles

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -19,7 +19,7 @@ import { Button } from '/src/components/Buttons.js';
 Salesforce Marketing Cloud is a complex and flexible tool. This combination is a dream-come-true set for enterprise Marketing Automation tools, but on the other hand, it enables mistakes and messy solutions. Find the right path to success through a best-practice fuelled checklist full of tool-based explanations and examples.
 
 <Button
-    link='./zen-of-sfmc/'
+    link='/docs/category/salesforce/marketing-cloud-engagement/zen-of-sfmc/'
     text='Read about Zen of SFMC'
 />
 
@@ -43,7 +43,7 @@ SSJS is an XX-century version of JavaScript paired with proprietary libraries cr
 - [Solve with Cloud Page Apps](/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/sfmc-cloud-page-apps.mdx)
 
 <Button
-    link='./category/ssjs/'
+    link='/docs/category/salesforce/marketing-cloud-engagement/ssjs/'
     text='Read about SSJS'
 />
 
@@ -63,7 +63,7 @@ In this part, I am gathering selected elements of modern vanilla JavaScript that
 - [Engage with Countdown](/docs/js/snippets/engage-with-countdown.mdx)
 
 <Button
-    link='./category/javascript/'
+    link='/docs/category/javascript/'
     text='Read about JavaScript'
 />
 
@@ -81,7 +81,7 @@ AMPScript is a proprietary scripting language in Salesforce Marketing Cloud alon
 - [AMPScript in SSJS](/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ampscript-in-ssjs.mdx)
 
 <Button
-    link='./category/ampscript/'
+    link='/docs/category/salesforce/marketing-cloud-engagement/ampscript/'
     text='Read about AMPScript'
 />
 
@@ -112,7 +112,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 - [Debugging Value Length](/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-value-length.mdx)
 
 <Button
-    link='./category/sfmc-sql/'
+    link='/docs/category/salesforce/marketing-cloud-engagement/sql/'
     text='Read about SFMC SQL'
 />
 
@@ -133,7 +133,7 @@ Many things in Salesforce Marketing Cloud aren't coding but have a massive impac
 - [Export, Import & Document Roles in Salesforce Marketing Cloud](/docs/salesforce/marketing-cloud-engagement/config/export-import-document-sfmc-roles.mdx)
 
 <Button
-    link='./category/sfmc-config/'
+    link='/docs/category/salesforce/marketing-cloud-engagement/config/'
     text='Read about SFMC Config'
 />
 
@@ -154,7 +154,7 @@ Salesforce Marketing Cloud Personalization (Interaction Studio) is a cross-chann
 - [Catalog ETL Metadata Viewer](/docs/salesforce/marketing-cloud-personalization/snippets/catalog-etl-metadata-viewer.mdx)
 
 <Button
-    link='./category/mc-personalization/'
+    link='/docs/category/salesforce/marketing-cloud-personalization/'
     text='Read about MC Personalization'
 />
 
