--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-style-guide.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-style-guide.mdx
@@ -589,4 +589,4 @@ If you want to share something I'm missing or have arguments for a different rec
 Looking for more Marketing Cloud style? Check out my:
 
 - [SSJS Style Guide](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-style-guide.mdx)
-- [AMPScript Style Guide](../ampscript/ampscript-style-guide.mdx)
+- [AMPScript Style Guide](/docs/salesforce/marketing-cloud-engagement/ampscript/ampscript-style-guide.mdx)
