--- a/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-mobileconnect-phone-change.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-mobileconnect-phone-change.mdx
@@ -108,7 +108,7 @@ Be sure, however, to normalize the number provided manually by the client for it
 
 ### Automate it
 
-You can also leverage the snippet within an Automation Studio using Data Extension as a batch data source and Script Activity for processing. Pack the snippet within a [`for` loop](../ssjs-loops.mdx) and make a more significant change to your MobileConnect data.
+You can also leverage the snippet within an Automation Studio using Data Extension as a batch data source and Script Activity for processing. Pack the snippet within a [`for` loop](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-loops.mdx) and make a more significant change to your MobileConnect data.
 
 :::note You Should Know
 
