--- a/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-style-guide.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-style-guide.mdx
@@ -298,8 +298,8 @@ If you do not use semicolons, JS will add them for you using Automatic Semicolon
 If you don't want to worry about ASI, per JS language specification, you should:
 
 - Mark the end of your simple statements with a semicolon `;`. Think variable declarations and operations.
-- Don't end complex statements with a semicolon. Think [`if`](./ssjs-if-and-switch.mdx#if-statements) statements, [loops](./ssjs-loops.mdx), `functions`, `try/catch` blocks.
-- But... you need a semicolon after the [`do/while` loop](./ssjs-loops.mdx#do-while). Because JavaScript (and yeah, it is different from [`while` loop](./ssjs-loops.mdx#while) when considering the statement blocks). Oh, and you will need to add them in your [`for` loop](./ssjs-loops.mdx#for) iteration rules.
+- Don't end complex statements with a semicolon. Think [`if`](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-if-and-switch.mdx#if-statements) statements, [loops](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-loops.mdx), `functions`, `try/catch` blocks.
+- But... you need a semicolon after the [`do/while` loop](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-loops.mdx#do-while). Because JavaScript (and yeah, it is different from [`while` loop](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-loops.mdx#while) when considering the statement blocks). Oh, and you will need to add them in your [`for` loop](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-loops.mdx#for) iteration rules.
 
 That's also a bit to digest and worry about when writing the code. Let's simplify it.
 
