--- a/docs/salesforce/marketing-cloud-personalization/serverside-code-basics.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/serverside-code-basics.mdx
@@ -107,7 +107,7 @@ export class NewTemplate implements CampaignTemplateComponent {
 The field configuration lets you add properties that will become part of the campaign configuration form used by marketers to set the experiences. It is the primary data input; MCP will directly pass all properties you add here to the campaign response.
 
 <Button
-    link='../mcp-serverside-code-properties/'
+    link='/docs/salesforce/marketing-cloud-personalization/serverside-code-properties/'
     text='Learn more'
     newTab='true'
 />
@@ -159,7 +159,7 @@ With the basics of Serverside Code processing, you are ready to start coding. Ne
 
 Here, I want to share a few of my favourite sources focusing on MCP Serverside Code and its use in Campaign Templates:
 
-1. My [MCP Campaign Templates and code snippets](../../category/-mc-personalization-snippets/)
+1. My [MCP Campaign Templates and code snippets](/docs/category/salesforce/marketing-cloud-personalization/snippets/)
 2. My [GitHub repository](https://github.com/MateuszDabrowski/mcp-campaign-templates) with Global and Custom Templates
 3. Christoper's Long [GitHub repository](https://github.com/christopher-longSFDC/mcp/) with Complex Templates
 4. Salesforce Japan [Template Catalog](https://is-template-guide.herokuapp.com/en/) with Web Campaigns
