--- a/docs/salesforce/marketing-cloud-personalization/serverside-code-properties.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/serverside-code-properties.mdx
@@ -477,7 +477,7 @@ As you can see, data from basic inputs is assigned as properties to the complex 
 
 3. You can nest complex properties
 
-Just as you can add a complex property to a field, you can also create a complex property using complex properties. While it can again give you all the benefits mentioned here, be careful not to go overboard. Deep nesting is more challenging to understand and use. There is no perfect rule, but check out [Simple/Complex recommendations in Zen of SFMC](../../zen-of-sfmc/#simple-is-better-than-complex).
+Just as you can add a complex property to a field, you can also create a complex property using complex properties. While it can again give you all the benefits mentioned here, be careful not to go overboard. Deep nesting is more challenging to understand and use. There is no perfect rule, but check out [Simple/Complex recommendations in Zen of SFMC](docs/salesforce/marketing-cloud-engagement/zen-of-sfmc/#simple-is-better-than-complex).
 
 4. You can leverage it to build an Array of complex properties!
 
